@@ -9,6 +9,7 @@ Jython 2.5.2a1
     - [ 1470 ] os.mkdir Errno difference from cpython
     - [ 1496 ] fix os.listdir errno for non-existing dirs
     - [ 1499 ] PostgreSQL datahandler should return Decimals instead of floats for NUMERIC/DECIMAL columns
+    - [ 1477 ] os.setpgrp and posix.setpgrp fail with TypeError
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
 
